add time-blocks withing HTML

--- a/index.html
+++ b/index.html
@@ -29,7 +29,114 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+
+      <!-- I used bootstrap for the container -->
+      <!-- 9am -->
+      <div class="input-group time-block">
+        <div class="input-group-prepend">
+          <span class="input-group-text hour"> 9AM  </span>
+        </div>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button class="saveBtn">Save</button>
+      </div>
+      <!-- 10am -->
+      <div class="input-group time-block">
+        <div class="input-group-prepend">
+          <span class="input-group-text hour"> 10AM </span>
+        </div>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button class="saveBtn">Save</button>
+      </div>
+      <!-- 9am -->
+      <div class="input-group time-block">
+        <div class="input-group-prepend">
+          <span class="input-group-text hour"> 9AM  </span>
+        </div>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button class="saveBtn">Save</button>
+      </div>
+      <!-- 10am -->
+      <div class="input-group time-block">
+        <div class="input-group-prepend">
+          <span class="input-group-text hour"> 10AM </span>
+        </div>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button class="saveBtn">Save</button>
+      </div>
+      <!-- 9am -->
+      <div class="input-group time-block">
+        <div class="input-group-prepend">
+          <span class="input-group-text hour"> 9AM  </span>
+        </div>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button class="saveBtn">Save</button>
+      </div>
+      <!-- 10am -->
+      <div class="input-group time-block">
+        <div class="input-group-prepend">
+          <span class="input-group-text hour"> 10AM </span>
+        </div>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button class="saveBtn">Save</button>
+      </div>
+      <!-- 11am -->
+      <div class="input-group time-block">
+        <div class="input-group-prepend">
+          <span class="input-group-text hour"> 11AM  </span>
+        </div>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button class="saveBtn">Save</button>
+      </div>
+      <!-- 12pm -->
+      <div class="input-group time-block">
+        <div class="input-group-prepend">
+          <span class="input-group-text hour"> 12PM </span>
+        </div>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button class="saveBtn">Save</button>
+      </div>
+      <!-- 1pm -->
+      <div class="input-group time-block">
+        <div class="input-group-prepend">
+          <span class="input-group-text hour"> 1PM  </span>
+        </div>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button class="saveBtn">Save</button>
+      </div>
+      <!-- 2pm -->
+      <div class="input-group time-block">
+        <div class="input-group-prepend">
+          <span class="input-group-text hour"> 2PM </span>
+        </div>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button class="saveBtn">Save</button>
+      </div>
+      <!-- 3pm -->
+      <div class="input-group time-block">
+        <div class="input-group-prepend">
+          <span class="input-group-text hour"> 3PM  </span>
+        </div>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button class="saveBtn">Save</button>
+      </div>
+      <!-- 4pm -->
+      <div class="input-group time-block">
+        <div class="input-group-prepend">
+          <span class="input-group-text hour"> 4PM </span>
+        </div>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button class="saveBtn">Save</button>
+      </div>
+      <!-- 5pm -->
+      <div class="input-group time-block">
+        <div class="input-group-prepend">
+          <span class="input-group-text hour"> 5PM </span>
+        </div>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button class="saveBtn">Save</button>
+      </div>
+
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
